--- a/phylogene_app/templates/Hunter-Gaston.html
+++ b/phylogene_app/templates/Hunter-Gaston.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="../static/img/karubionet2favicon.png" />
   <title>Hunter-Gaston</title>
   {% endblock %}
-</head> 
+</head>
 
 {% block content %}
 <script src="https://unpkg.com/vis-network@9.1.0/standalone/umd/vis-network.min.js"></script>
@@ -20,134 +20,133 @@
 <link rel="stylesheet" href="../static/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 
-   <style>
-   #hunter-gaston
-   {
-		   background-color: #ffffff;
-		   text-align: center;
+<style>
+  #hunter-gaston {
+    background-color: #ffffff;
+    text-align: center;
 
 
-   }
+  }
 
-   #mylegend {
-	 float: left;
-	 width: 400px;
-	 height: 600px;
-   }
-   </style>
-   {% endblock%}
-   {%block javascripts %}
+  #mylegend {
+    float: left;
+    width: 400px;
+    height: 600px;
+  }
+</style>
+{% endblock%}
+{%block javascripts %}
 
-   <script type="text/javascript">
-    $(function() {
-    $(document).ready(function() {
-        $('#example').DataTable();
-      });
+<script type="text/javascript">
+  $(function () {
+    $(document).ready(function () {
+      $('#example').DataTable();
     });
+  });
 
-   var table= {{minimal_tree | safe}};
-   labelSeq={{label_reduce | safe}};
-   var nodes=[];
-   var dico= new Map();
-   
-   var firstcolumn = window.opener.parent.array.length ;
-   var reachID = window.opener.parent.array[window.opener.parent.array.length-firstcolumn];
-   var lastItem = window.opener.parent.array[window.opener.parent.array.length-2];
-   
-	// DÃ©but HGDI
-    var retrievedObject = sessionStorage.getItem('TableauduCSV');
+  var table = {{ minimal_tree | safe}};
+  labelSeq = {{ label_reduce | safe }};
+  var nodes = [];
+  var dico = new Map();
 
-damienitem = JSON.parse(retrievedObject).length
+  var firstcolumn = window.opener.parent.array.length;
+  var reachID = window.opener.parent.array[window.opener.parent.array.length - firstcolumn];
+  var lastItem = window.opener.parent.array[window.opener.parent.array.length - 2];
 
-var hdgi1 = [];
-var hdgi2 = [];
+  // Début HGDI
+  var retrievedObject = sessionStorage.getItem('TableauduCSV');
 
-for (var i = 0; i < damienitem; i++) { 
-  damien = JSON.parse(retrievedObject)[i];
+  damienitem = JSON.parse(retrievedObject).length
 
-	var numberstraintested = damien.length ;
-	var difftypenum = [], count = 0;
-  var numberstrainpertype = {};
-  
-  if(difftypenum[damien] == undefined) {
-    	    difftypenum[damien] = 1;
-      	  count++;
-    	}
+  var hdgi1 = [];
+  var hdgi2 = [];
 
-	damien.forEach(function (x) { numberstrainpertype[x] = (numberstrainpertype[x] || 0) + 1; });
+  for (var i = 0; i < damienitem; i++) {
+    damien = JSON.parse(retrievedObject)[i];
 
-	for (const [key, value] of Object.entries(numberstrainpertype)) {
-  	  console.log(`${key}: ${value}`);
-    	sumStrain(numberstrainpertype[`${key}`])
-	}
+    var numberstraintested = damien.length;
+    var difftypenum = [], count = 0;
+    var numberstrainpertype = {};
 
-  //fonction permettant de compter le nombre de souches dans une colonne
-	function sumStrain(a){
-  	  var total=0;
-    	for(var k in a) {
-      	  total += a[k]*(a[k]-1);
-    	}
-    	return total;
-	}
-  //fin fonction
-	
-  //compte le nombre total de souche dans la colonne
-	var SumNumbDiffStrain = sumStrain(numberstrainpertype) ;  
 
-  //calcul dÃ©coupÃ© en deux partie car je n'ai pas rÃ©ussi Ã  l'Ã©crire en une seule fois
-  hdgi1.push(1 / (numberstraintested * (numberstraintested-1)));
-  hdgi2.push(1-(hdgi1[i] * SumNumbDiffStrain));
-}
+    if (difftypenum[damien] == undefined) {
+      difftypenum[damien] = 1;
+      count++;
+    }
+
+    damien.forEach(function (x) { numberstrainpertype[x] = (numberstrainpertype[x] || 0) + 1; });
+
+    for (const [key, value] of Object.entries(numberstrainpertype)) {
+      console.log(`${key}: ${value}`);
+      sumStrain(numberstrainpertype[`${key}`])
+    }
+
+    //fonction permettant de compter le nombre de souches dans une colonne
+    function sumStrain(a) {
+      var total = 0;
+      for (var k in a) {
+        total += a[k] * (a[k] - 1);
+      }
+      return total;
+    }
+    //fin fonction
+
+    //compte le nombre total de souche dans la colonne
+    var SumNumbDiffStrain = sumStrain(numberstrainpertype);
+
+    //calcul découpé en deux partie car je n'ai pas réussi à l'écrire en une seule fois
+    hdgi1.push(1 / (numberstraintested * (numberstraintested - 1)));
+    hdgi2.push(1 - (hdgi1[i] * SumNumbDiffStrain));
+  }
 // Fin HGDI
-   </script>
+</script>
 
-   <div class="container-fluid" style="background-color: #a6aaa9;" >
-    <h1 style="text-align: center;" >Hunter-Gaston</h1>
-	   <div class="col-lg-10" style="float:none;margin:auto;background-color: #ffffff;">
-        <div class="container">
-          <div id="tab_data" class="table-responsive" >
-            <form  id="form1" autocomplete="off" method="POST" action="">
-            
-                <table id="example"style="width:100%" class="table table-striped table-bordered">
-                     <thead>
-                       <tr>
-                           <th scope="col" class="col-3">Column tested</th>
-                           <th scope="col" class="col-3">HGDI value</th>
-                       </tr>
-                     </thead>
-                       <tbody id="tbody"></tbody>
+<div class="container-fluid" style="background-color: #a6aaa9;">
+  <h1 style="text-align: center;">Hunter-Gaston</h1>
+  <div class="col-lg-10" style="float:none;margin:auto;background-color: #ffffff;">
+    <div class="container">
+      <div id="tab_data" class="table-responsive">
+        <form id="form1" autocomplete="off" method="POST" action="">
 
-                        <script> 
+          <table id="example" style="width:100%" class="table table-striped table-bordered">
+            <thead>
+              <tr>
+                <th scope="col" class="col-3">Column tested</th>
+                <th scope="col" class="col-3">HGDI value</th>
+              </tr>
+            </thead>
+            <tbody id="tbody"></tbody>
 
-                            var toto = sessionStorage.getItem('test_head');
+            <script>
 
-                            var tata = JSON.parse(toto) ;
+              var toto = sessionStorage.getItem('test_head');
 
-                            var re = /\s*(\t|$)\s*/;
+              var tata = JSON.parse(toto);
 
-                            var nameList = tata.split(re);
+              var re = /\s*(\t|$)\s*/;
 
-                            nameList.forEach((item, index, arr) => {
-                              if (item === "\t") {
-                                arr.splice(index, 1);
-                              }
-                            });
-                        
-                            var tbody = document.getElementById('tbody');
+              var nameList = tata.split(re);
 
-                            for (var i = 0; i < hdgi2.length; i++) {
-                                var tr = "<tr>";
-                                tr += "<td>"+nameList[i+1]+"</td>" + "<td>" + hdgi2[i] + "</td></tr>";
-                                tbody.innerHTML += tr;
-                            }</script>
-                    </table>
-                </form>
-            </div>
-        </div>
-       </div>
-   </div>
-   {% endblock %} 
+              nameList.forEach((item, index, arr) => {
+                if (item === "\t") {
+                  arr.splice(index, 1);
+                }
+              });
 
-   </div>
-   </div>
- 
+              var tbody = document.getElementById('tbody');
+
+              for (var i = 0; i < hdgi2.length; i++) {
+                var tr = "<tr>";
+                tr += "<td>" + nameList[i + 1] + "</td>" + "<td>" + hdgi2[i] + "</td></tr>";
+                tbody.innerHTML += tr;
+              }</script>
+          </table>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
+
+</div>
+</div>
