--- a/phylogene_app/templates/import_data.html
+++ b/phylogene_app/templates/import_data.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 {% extends 'base.html' %}
 {% block content %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"/>
+
 
 <div style="margin-top: 1em;">
     {% if error %}
@@ -73,6 +75,11 @@
                     {% endfor %}
                 </tbody>
             </table>
+        <script>
+            $(document).ready(function() {
+                $(".dropdown-toggle").dropdown();
+                });
+        </script>
 
             <!--le onclick permet de savoir le nom du button submited-->
             <div>
@@ -80,6 +87,7 @@
                     <input id="submit1" name="kruskal" class="btn btn-primary" type="submit" value="kruskal" onclick="this.form.submited=this.value;" >
                     <input id="submit2" name="upgma"   class="btn btn-primary" type="submit" value="upgma" onclick="this.form.submited=this.value;" >
                     <input id="submit3" name="neighbor-joining"   class="btn btn-primary" type="submit" value="neighbor-joining" onclick="this.form.submited=this.value;" >
+                    <input id="submit12" name="Wordcloud"   class="btn btn-primary" type="submit" value="Wordcloud" onclick="this.form.submited=this.value;" >
                 </h6>
                 <h6>Statistics :
                     <input id="submit4" name="boxplot"   class="btn btn-primary" type="submit" value="boxplot" onclick="this.form.submited=this.value;" >
@@ -96,7 +104,19 @@
                     <input id="submit10" name="Shannon-Entropy"   class="btn btn-primary" type="submit" value="Shannon-Entropy" onclick="this.form.submited=this.value;" >
                 </h6>
                 <h6>Machine Learning :
-                    <input id="submit12" name="Rtest"   class="btn btn-primary" type="submit" value="Rtest" onclick="this.form.submited=this.value;" >
+                    <input id="submit12" name="Regression"   class="btn btn-primary" type="submit" value="Regression" onclick="this.form.submited=this.value;" >
+                    <input id="submit12" name="Prediction"   class="btn btn-primary" type="submit" value="Prediction" onclick="this.form.submited=this.value;" >
+                    <input id="submit12" name="Decison Tree"   class="btn btn-primary" type="submit" value="Decison Tree" onclick="this.form.submited=this.value;" >
+                        <div class="dropdown">
+                          <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                            Action
+                          </button>
+                          <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Dompteurs</a>
+                            <a class="dropdown-item" href="#">Zoos</a>
+                            <a class="dropdown-item" href="#">Chasseurs</a>
+                          </div>
+                        </div>
                 </h6>
 
             </div>       
