nouvelle option Clustermap

--- a/phylogene_app/templates/import_data.html
+++ b/phylogene_app/templates/import_data.html
@@ -125,7 +125,8 @@
                           </button>
                           <div class="dropdown-menu">
                               <input id="submit19" name="h_clust" type="submit" value="h_clust" onclick="this.form.submited=this.value;" >
-                              <input id="submit20" name="h_clust_test" type="submit" value="h_clust_test" onclick="this.form.submited=this.value;" >
+                              <input id="submit20" name="k_means" type="submit" value="k_means" onclick="this.form.submited=this.value;" >
+                              <input id="submit21" name="clustermap" type="submit" value="clustermap" onclick="this.form.submited=this.value;" >
                           </div>
                         </div>
                     <!--<select form="myGeeks" id="myCourses" autofocus>
