fichier sans accent donc aucun pb utf-8

--- a/phylogene_app/templates/Hunter-Gaston.html
+++ b/phylogene_app/templates/Hunter-Gaston.html
@@ -94,7 +94,7 @@
     //compte le nombre total de souche dans la colonne
     var SumNumbDiffStrain = sumStrain(numberstrainpertype);
 
-    //calcul découpé en deux partie car je n'ai pas réussi à l'écrire en une seule fois
+    //calcul decoupe en deux partie car je n'ai pas réussi a l'écrire en une seule fois
     hdgi1.push(1 / (numberstraintested * (numberstraintested - 1)));
     hdgi2.push(1 - (hdgi1[i] * SumNumbDiffStrain));
   }
