fichier sans accent donc aucun pb utf-8

--- a/phylogene_app/templates/Hunter-Gaston.html
+++ b/phylogene_app/templates/Hunter-Gaston.html
@@ -53,7 +53,7 @@
   var reachID = window.opener.parent.array[window.opener.parent.array.length - firstcolumn];
   var lastItem = window.opener.parent.array[window.opener.parent.array.length - 2];
 
-  // Début HGDI
+  // Debut HGDI
   var retrievedObject = sessionStorage.getItem('TableauduCSV');
 
   damienitem = JSON.parse(retrievedObject).length
