--- a/phylogene_app/templates/kruskal.html
+++ b/phylogene_app/templates/kruskal.html
@@ -17,7 +17,6 @@
   <!-- <link href="http://visjs.org/dist/vis.css" rel="stylesheet" type="text/css" /> -->
   <!-- <link href="https://unpkg.com/browse/vis-network@9.1.1/styles/vis-network.min.css" rel="stylesheet" type="text/css" /> -->
   <link rel="stylesheet" href="../static/css/bootstrap.min.css">
-  
 
 
 <div class="container-fluid" style="background-color: #a6aaa9;" >
@@ -26,33 +25,43 @@
     
       <div id="graph"></div>
       <div id="config"></div>
-    <p id="selection"></p>
+    <p id="selection">If a node hide another node, use "Avoid overlap"</p>
+    <p style="width: 700px; font-size: 14px; text-align: justify">
+  If a node hide another node, use "Avoid overlap"
+</p>
      
 <style>
   #graph {
     float: left;
-    width: 1100px;
-    height: 1200px;
-    /* margin: 1px; */
+    width: 1200px;
+    height: 900px;
+    margin: 5px;
     border: 1px solid lightgray;
   }
   #config {
-    float: right;
-    width: 400px;
-    height: 500px;
-    
-  }
+  float: left;
+  width: 400px;
+  height: 600px;
+}
+
+  #mynetwork {
+  float: left;
+  width: 600px;
+  height: 600px;
+  margin: 5px;
+  border: 1px solid lightgray;
+}
 /* #graph
 {
   background-color: #faf4f4;
         
 } */
 
-#mylegend {
+{% comment %}mylegend {
   float: left;
   width: 400px;
   height: 600px;
-}
+}{% endcomment %}
 </style>
 {% endblock%}
 {%block javascript %}
@@ -204,20 +213,33 @@ var container = document.getElementById('graph');
    
 
 var options = {
-  physics:{
-    enabled:true,
+  physics: {
+      stabilization: false,
+      wind: { x: 0, y: 0 },
     },
   // configure: {
   //       container: document.getElementById("config"),
   //       showButton: false,
   //     },
-  configure: {
+  {% comment %}configure: {
     enabled: true,
     filter: "nodes",
     container: document.getElementById("config"),
     showButton: false,
   },
-  manipulation: true,
+  manipulation: true,{% endcomment %}
+  configure: {
+      filter: function (option, path) {
+        if (path.indexOf("physics") !== -1) {
+          return true;
+        }
+        if (path.indexOf("smooth") !== -1 || option === "smooth") {
+          return true;
+        }
+        return false;
+      },
+      container: document.getElementById("config"),
+    },
   //ajout de flèche
   // edges:{
   //   arrows: 'to',
@@ -236,51 +258,9 @@ var graph = new vis.Network(container, data, options);
   // var tableData = $('#example').DataTable();
   // var allData = table.columns().data();
 
-// Début HGDI
-var numberstraintested = lastItem.length ;
+// Run physics once to space out the nodes.
+graph.stabilize();
 
-var difftypenum = [], count = 0, i = 0;
-for(i=0; i<lastItem.length; i++) {
-    if(difftypenum[lastItem[i]] == undefined) {
-        difftypenum[lastItem[i]] = 1;
-        count++;
-    }
-}
-//console.log(count);
-//test comptage
-var numberstrainpertype = {};
-lastItem.forEach(function (x) { numberstrainpertype[x] = (numberstrainpertype[x] || 0) + 1; });
-
-var sum = 0;
-
-for (const [key, value] of Object.entries(numberstrainpertype)) {
-    console.log(`${key}: ${value}`);
-    //sum =  ${value} ;
-}
-
-//tester dans la console : Object.values(numberstrainpertype).forEach(val => console.log(val));
-
-// fin test
-
-//début fonction calcul somme des souches
-
-function sumStrain(a){
-    var total=0;
-    for(var i in a) {
-        total += a[i]*(a[i]-1);
-    }
-    return total;
-}
-
-//fin fonction calcul somme des souches
-
-var SumNumbDiffStrain = sumStrain(numberstrainpertype) ;
-
-var hdgi1 = 1 / (numberstraintested * (numberstraintested-1));
-
-var hdgi2 = 1-(hdgi1 * SumNumbDiffStrain) ;
-
-// Fin HGDI
 
 </script>
 {% endblock%}
