--- a/phylogene_app/templates/base.html
+++ b/phylogene_app/templates/base.html
@@ -15,10 +15,12 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.datatables.net/v/dt/dt-1.10.13/se-1.2.0/datatables.min.css">
   <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+{% comment %}
   <link rel="stylesheet" href="../static/css/phylotree.css">
+{% endcomment %}
 
   {% endblock %}
-  <title>PhylEntropy</title>
+  <title>phylEntropy</title>
 
   <style>
     h1 {
@@ -28,40 +30,46 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-light fixed-top " style="background-color: #e3f2fd;">
-    <a class="navbar-brand" href="#">PhylEntropy</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-      aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="{% url 'intro' %}">Home </a>
+        <nav class="navbar navbar-expand-md navbar-light fixed-top " style="background-color: #e3f2fd;">
+            <a class="navbar-brand" href="#">phylEntropy</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+              <ul class="navbar-nav mr-auto">
 
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'phylogene_import' %}">Analysis<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="http://www.pasteur-guadeloupe.fr/karubionet.html" target="_blank">KaruBioNet</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-      <!-- <form class="form-inline mt-2 mt-md-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form> -->
-    </div>
-  </nav>
+                <li class="nav-item active">
+                  <a class="nav-link" href="{% url 'intro' %}"><i class="fa fa-home"></i> Home<span class="sr-only">(current)</span></a>
+                </li>
+
+                <li class="nav-item">
+                  <a class="nav-link" href="#" onclick="return show('Page2','Page1');">About Phylentropy</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'phylogene_import' %}"><i class='fa fa-cog'></i> Analysis</a>
+                </li>
+
+                <li class="nav-item">
+                  <a class="nav-link" href="#"><i class='fa fa-paperclip'></i> Links</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#" onclick="return show('Page3','Page1');"><i class="fa fa-book"></i> Credits</a>
+                </li>
+              </ul>
+              <!-- <form class="form-inline mt-2 mt-md-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form> -->
+            </div>
+        </nav>
 
   <div class="container-fluid" style="background-color: #a6aaa9;">
 
     <!--BANDEAU -->
     <div class="container" style="background-color: #ffffff;">
-      <a href="http://www.pasteur-guadeloupe.fr/karubionet.html" target="_blank" col>
+      <a href="http://www.pasteur-guadeloupe.fr/karubionet.html" target="_blank" col></a>
         <div class="col-lg-4" style="float:none;margin:auto;">
           <div class="d-flex flex-column text-center height100">
             <div>
@@ -70,9 +78,8 @@
               <img src="../static/img/LogoSample_ByTailorBrands.jpg" class="rounded" />
             </div>
           </div>
-      </a>
-    </div>
-    <p>Cliquer sur le logo pour télécharger le fichier csv test:
+        </div>
+    <p>Download test csv file: <button type="submit" class="btn btn-primary" onclick="window.open('../static/files/exemple_2.csv')"><i class="fa fa-download"></i> Download</button>
       <a href="../static/files/exemple_csv.csv" download>
         <img src="../static/img/index.jpg" alt="csvfiletest" width="70" height="70">
       </a>
